--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.ngt linguist-language=NGT
+*.ngt linguist-language=angelScript
